--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
     </div>
     <div class="about-us-wrapper">
-      <div class="container no-padding-margin">
+      <div class="container no-padding-margin w-100">
         <div class="row">
           <div class="col-md-6 col-sm-12">
             <div>
