--- a/index.html
+++ b/index.html
@@ -14,26 +14,29 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <nav class="left-sidebar">
-      <div class="logo"><p>*</p></div>
-      <div class="text"><p>sometextblegh</p></div>
-      <div class="menu-nav">
-        <ul class="nav-ul">
-          <li>Blog</li>
-          <li>About</li>
-          <li>Contact</li>
-          <li>Portfolio</li>
-        </ul>
+    <div class="sidebar">
+      <div class="sidebar-part-1">
+        <a href="javascript:void(0);"> * </a>
       </div>
-      <hr style="position: relative; top: 390px" />
-      <div class="menu-btn">
-        <a class="nav-btn" href="javascript:void(0);">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </a>
+      <div class="sidebar-part-2">
+        <div class="sidebar-middle">
+          <div class="sidebar-middle-menu">
+            <nav>
+              <div id="navbar-menu" class="navbar-collapse"></div>
+            </nav>
+          </div>
+        </div>
       </div>
-    </nav>
+      <div class="sidebar-part-3">
+        <div class="menu-icon">
+          <a href="javascript:void(0);">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
