--- a/index.html
+++ b/index.html
@@ -22,18 +22,25 @@
         <div class="sidebar-middle">
           <div class="sidebar-middle-menu">
             <nav>
-              <div id="navbar-menu" class="navbar-collapse"></div>
+              <div id="navbar-menu" class="navbar-collapse">
+                <ul class="nav">
+                  <li class="droprown active"></li>
+                  <li class="droprown"></li>
+                  <li class="droprown"></li>
+                  <li class="droprown"></li>
+                </ul>
+              </div>
             </nav>
           </div>
         </div>
       </div>
       <div class="sidebar-part-3">
         <div class="menu-icon">
-          <a href="javascript:void(0);">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+          <a class="menu-btn" href="javascript:void(0);">
+            <span class="down"></span>
+            <span class="rotateL"></span>
+            <span class="rotateR"></span>
+            <span class="up"></span>
           </a>
         </div>
       </div>
