--- a/index.html
+++ b/index.html
@@ -24,13 +24,31 @@
             <nav>
               <div id="navbar-menu" class="navbar-collapse">
                 <ul class="nav">
-                  <li class="droprown active"></li>
-                  <li class="droprown"></li>
-                  <li class="droprown"></li>
-                  <li class="droprown"></li>
+                  <li class="dropdown active">
+                    <a href="#">Test1</a>
+                    <ul class="sub-menu">
+                      <li class="sub-menu-dropdown"><p>Test2</p></li>
+                      <li class="sub-menu-dropdown"><p>Test2</p></li>
+                      <li class="sub-menu-dropdown"><p>Test2</p></li>
+                      <li class="sub-menu-dropdown"><p>Test2</p></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown">
+                    <a href="#">Test1</a>
+                    <ul class="sub-menu">
+                      <li class="sub-menu-dropdown"><p>Test21</p></li>
+                      <li class="sub-menu-dropdown"><p>Test21</p></li>
+                      <li class="sub-menu-dropdown"><p>Test21</p></li>
+                      <li class="sub-menu-dropdown"><p>Test21</p></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown">Test1</li>
+                  <li class="dropdown">Test1</li>
                 </ul>
               </div>
             </nav>
+            <div class="social-media-icon-wrapper"></div>
+            <div class="white-bg"><p>Kukarikuuu</p></div>
           </div>
         </div>
       </div>
