--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <div class="text">Caption Three</div>
         </div>
       </div>
+      <div class="blur"></div>
       <br />
       <div class="rectangle-container">
         <div class="rectangle" id="element1">
@@ -121,5 +122,11 @@
         </div>
       </div>
     </div>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+    doloremque illum amet et sit porro pariatur inventore nostrum obcaecati
+    fuga, iusto fugit dolorum enim explicabo quae quia impedit perferendis
+    aliquam nobis ipsa placeat? Voluptatibus, illum, reprehenderit sit tempora
+    aut consectetur error cum suscipit animi amet voluptas dolor iste, facilis
+    accusantium?
   </body>
 </html>
