--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+    />
 
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
@@ -26,6 +29,7 @@
                 <ul class="nav">
                   <li class="dropdown active">
                     <a href="#">Test1</a>
+                    <i class="fas fa-angle-right"></i>
                     <ul class="sub-menu">
                       <div class="sub-menu-wrapper">
                         <li class="sub-menu-dropdown"><p>Test2</p></li>
@@ -70,20 +74,21 @@
     <div class="slider">
       <div class="slideshow-container">
         <div class="mySlides active" id="element1">
+          <img src="Pictures/IMG_1.jpg" style="width: 100%" />
           <div class="numbertext">1 / 3</div>
-          <img
-            src="https://images.pexels.com/photos/3225517/pexels-photo-3225517.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            style="width: 100%"
-          />
-          <div class="slider-text">Caption Text</div>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-3">
+                <div class="slider-text">Caption Text</div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="mySlides" id="element2">
           <div class="numbertext">2 / 3</div>
-          <img
-            src="https://assets.hongkiat.com/uploads/nature-photography/autumn-poolside.jpg"
-            style="width: 100%"
-          />
+          <img src="Pictures/IMG_3.jpg" style="width: 100%" />
           <div class="slider-text">Caption Two</div>
         </div>
 
@@ -122,11 +127,17 @@
         </div>
       </div>
     </div>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-    doloremque illum amet et sit porro pariatur inventore nostrum obcaecati
-    fuga, iusto fugit dolorum enim explicabo quae quia impedit perferendis
-    aliquam nobis ipsa placeat? Voluptatibus, illum, reprehenderit sit tempora
-    aut consectetur error cum suscipit animi amet voluptas dolor iste, facilis
-    accusantium?
+    <div class="about-us">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sx-12 col-md-6 col-xl-3">
+            <img src="Pictures/IMG_9.jpg" alt="" />
+          </div>
+          <div class="col-sx-12 col-md-6 col-xl-3">
+            <img src="Pictures/IMG_9.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
