--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
           <div class="col-sx-12 col-md-6 col-xl-3">
             <img src="Pictures/IMG_9.jpg" alt="" />
           </div>
+          <div class="col-sx-12 col-md-12 col-xl-6">
+            <div class="about-us-title"><h1>Dis iz about us title</h1></div>
+            <div class="about-us-big-text"><h6>Dis iz some big text</h6></div>
+            <div class="about-us-small-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Corporis voluptatem modi ullam officia, distinctio blanditiis
+                eum molestias. Ad, doloribus debitis.
+              </p>
+            </div>
+            <button class="about-us-button">About us</button>
+          </div>
         </div>
       </div>
     </div>
