--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
           <div class="slider-text">Caption Three</div>
         </div>
       </div>
-      <div class="blur"></div>
       <br />
       <div class="rectangle-container">
         <div class="rectangle" id="element1">
@@ -138,8 +137,12 @@
           </div>
           <div class="col-sx-12 col-md-12 col-xl-6 p-3">
             <div class="about-us-text">
-              <div class="about-us-title"><h1>Dis iz about us title</h1></div>
-              <div class="about-us-big-text"><h6>Dis iz some big text</h6></div>
+              <div class="about-us-title">
+                <h1>Dis iz about us title</h1>
+              </div>
+              <div class="about-us-big-text">
+                <h6>Dis iz some big text</h6>
+              </div>
               <div class="about-us-small-text">
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -149,6 +152,77 @@
               </div>
             </div>
             <button class="about-us-button"><p>About company</p></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="services">
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-xl-3 col-sm-12 col-md-6">
+            <div class="services-single">
+              <div class="services-img">
+                <img
+                  src="https://img.icons8.com/pastel-glyph/64/000000/scroll--v1.png"
+                />
+              </div>
+              <div class="services-title"><h6>Service title1</h6></div>
+              <div class="services-text">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Odit, officia?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-12 col-md-6">
+            <div class="services-single">
+              <div class="services-img">
+                <img
+                  src="https://img.icons8.com/wired/50/000000/home.png"
+                  style="height: 50px"
+                />
+              </div>
+              <div class="services-title"><h6>Service title2</h6></div>
+              <div class="services-text">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Odit, officia?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-12 col-md-6">
+            <div class="services-single">
+              <div class="services-img">
+                <img
+                  src="https://img.icons8.com/wired/50/000000/globe-earth.png"
+                />
+              </div>
+              <div class="services-title"><h6>Service title3</h6></div>
+              <div class="services-text">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Odit, officia?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-12 col-md-6">
+            <div class="services-single">
+              <div class="services-img">
+                <img
+                  src="https://img.icons8.com/wired/50/000000/opened-folder.png"
+                />
+              </div>
+              <div class="services-title"><h6>Service title4</h6></div>
+              <div class="services-text">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Odit, officia?
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
