--- a/index.html
+++ b/index.html
@@ -160,67 +160,75 @@
       <div class="container my-5">
         <div class="row">
           <div class="col-xl-3 col-sm-12 col-md-6">
-            <div class="services-single">
-              <div class="services-img">
-                <img
-                  src="https://img.icons8.com/pastel-glyph/64/000000/scroll--v1.png"
-                />
-              </div>
-              <div class="services-title"><h6>Service title1</h6></div>
-              <div class="services-text">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Odit, officia?
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-sm-12 col-md-6">
-            <div class="services-single">
-              <div class="services-img">
-                <img
-                  src="https://img.icons8.com/wired/50/000000/home.png"
-                  style="height: 50px"
-                />
-              </div>
-              <div class="services-title"><h6>Service title2</h6></div>
-              <div class="services-text">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Odit, officia?
-                </p>
+            <div class="services-single-wrapper">
+              <div class="services-single">
+                <div class="services-img">
+                  <img
+                    src="https://img.icons8.com/pastel-glyph/64/000000/scroll--v1.png"
+                  />
+                </div>
+                <div class="services-title"><h6>Service title1</h6></div>
+                <div class="services-text">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odit, officia?
+                  </p>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-sm-12 col-md-6">
-            <div class="services-single">
-              <div class="services-img">
-                <img
-                  src="https://img.icons8.com/wired/50/000000/globe-earth.png"
-                />
-              </div>
-              <div class="services-title"><h6>Service title3</h6></div>
-              <div class="services-text">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Odit, officia?
-                </p>
+            <div class="services-single-wrapper">
+              <div class="services-single">
+                <div class="services-img">
+                  <img
+                    src="https://img.icons8.com/wired/50/000000/home.png"
+                    style="height: 50px"
+                  />
+                </div>
+                <div class="services-title"><h6>Service title2</h6></div>
+                <div class="services-text">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odit, officia?
+                  </p>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-sm-12 col-md-6">
-            <div class="services-single">
-              <div class="services-img">
-                <img
-                  src="https://img.icons8.com/wired/50/000000/opened-folder.png"
-                />
+            <div class="services-single-wrapper">
+              <div class="services-single">
+                <div class="services-img">
+                  <img
+                    src="https://img.icons8.com/wired/50/000000/globe-earth.png"
+                  />
+                </div>
+                <div class="services-title"><h6>Service title3</h6></div>
+                <div class="services-text">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odit, officia?
+                  </p>
+                </div>
               </div>
-              <div class="services-title"><h6>Service title4</h6></div>
-              <div class="services-text">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Odit, officia?
-                </p>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-12 col-md-6">
+            <div class="services-single-wrapper">
+              <div class="services-single">
+                <div class="services-img">
+                  <img
+                    src="https://img.icons8.com/wired/50/000000/opened-folder.png"
+                  />
+                </div>
+                <div class="services-title"><h6>Service title4</h6></div>
+                <div class="services-text">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odit, officia?
+                  </p>
+                </div>
               </div>
             </div>
           </div>
