--- a/index.html
+++ b/index.html
@@ -235,5 +235,36 @@
         </div>
       </div>
     </div>
+    <div class="numbers">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-3 col-md-3 col-sm-12">
+            <div class="number-wrap">
+              <p id="number1"></p>
+              <div class="number-text">Happy Clients</div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-3 col-sm-12">
+            <div class="number-wrap">
+              <p id="number2"></p>
+              <div class="number-text">Happy Clients</div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-3 col-sm-12">
+            <div class="number-wrap">
+              <p id="number3"></dipv>
+              <div class="number-text">Happy Clients</div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-3 col-sm-12">
+            <div class="number-wrap">
+              <p id="number4"></p>
+              <div class="number-text">Happy Clients</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
