--- a/index.html
+++ b/index.html
@@ -241,25 +241,25 @@
           <div class="col-xl-3 col-md-3 col-sm-12">
             <div class="number-wrap">
               <p id="number1"></p>
-              <div class="number-text">Happy Clients</div>
+              <div class="number-text"><p>Happy Clients</p></div>
             </div>
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
             <div class="number-wrap">
               <p id="number2"></p>
-              <div class="number-text">Happy Clients</div>
+              <div class="number-text"><p>Happy Clients</p></div>
             </div>
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
             <div class="number-wrap">
               <p id="number3"></dipv>
-              <div class="number-text">Happy Clients</div>
+              <div class="number-text"><p>Happy Clients</p></div>
             </div>
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
             <div class="number-wrap">
               <p id="number4"></p>
-              <div class="number-text">Happy Clients</div>
+              <div class="number-text"><p>hepi hepi hepii</p></div>
             </div>
           </div>
         </div>
